add DownloadList and ContentDownloadList